style.css
#header-title {
  width: 100%;
  text-align: center;
  color: #CBF5F9;
  font-size: 35px;
  font-weight: 700;
  letter-spacing: 4px;
  font-family: 'Kanit', sans-serif;
  position: fixed;
  top: 0px;
  left: 0px;
  margin-top: 0px;
  padding-top: 15px;
  padding-bottom: 15px;
  background-image: linear-gradient(to right, #71ABD1, #D983E4);
    z-index: 3;
}

div.lol{
  display: flex;
  justify-content: center;
  text-align: center;
  width: 200px;
  height: 407px;
  padding-top: 115px;
  padding-bottom: 45px;
}

div.preview {
  display: flex;
  justify-content: center;
  text-align: center;
}

#preview-img {
  width: 85%;
  height: 85%;
  padding-top: 115px;
  padding-bottom: 45px;
}

div.our-peeps {
  display: flex;
  justify-content: center;
  border-top: 1px solid #9B47EF;
}

#our-peeps {
  color: #71ABD1;
  font-size: 30px;
  font-weight: 700;
  letter-spacing: 2px;
  font-family: 'Alegreya Sans SC', sans-serif;
  padding-top: 20px;
}


div.team {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  padding-bottom: 45px;
  border-bottom: 1px solid #9B47EF;
}

#team-member {
  padding: 2%;
  margin: 3%;
  border: 2px solid #71ABD1;
  height: 70%;
  width: 70%;
  border-radius: 10%
}

div.description {
  justify-content: center;
  margin: auto;
  border-top: 1px solid #9B47EF;
  border-bottom: 1px solid #9B47EF;
}

#our-game {
  color: #71ABD1;
  font-size: 40px;
  font-weight: 700;
  letter-spacing: 4px;
  font-family: 'Alegreya Sans SC', sans-serif;
  text-align: center;
  margin-top: 100px;
  width: 100%;
}

#description {
  color: #71ABD1;
  font-size: 20px;
  font-weight: 350;
  letter-spacing: 2px;
  font-family: 'Hind Vadodara', sans-serif;
  text-align: center;
  padding-bottom: 45px;
}

.footer {
  position: static;
  text-align: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
}
 
.flex-col {
  display: flex;
  flex-direction: column;
  width: 33%;
}

.menu,
.info,
.contact {
  text-align: center;
  color: #71ABD1;
  font-size: 20px;
  font-weight: 350;
  letter-spacing: 2px;
  font-family: 'Kanit', sans-serif;

}

#footer-menu,
#footer-info,
#footer-contact {
  color: #71ABD1;
  font-size: 20px;
  font-weight: 700;
  letter-spacing: 2px;
  font-family: 'Kanit', sans-serif;
  z-index: 1;
}

#instagram-icon {
  height: 25px;
  width: 25px;
}


.caption {
  display: block;
}

a:link {
  color: #DE90C5;
  text-decoration: none;
}

a:visited {
  color: #DE90C5;
  text-decoration: none;
}

a:hover {
  color: #DE90C5;
  text-decoration: none;
}

a:active {
  color: #DE90C5;
  text-decoration: none;
}

.gallery {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  padding-bottom: 45px;
  padding-top: 45px;
  border-bottom: 1px solid #9B47EF;
}

.gallery-img {
  vertical-align: top;
  display: inline-block;
  text-align: center;
  height: 45%;
  width: 45%;
  border-radius: 10%;
}

#img-gallery {
  padding: 2%;
  margin: 3%;
  height: 95%;
  width: 95%;
  border-radius: 10%;
}

.slidershow{
  width: 1050px;
  height: 600px;
  overflow: hidden;
  z-index: 0;
}
.center{
  position: absolute;
  top: 275px;
  left: 50%;
  transform: translate(-50%,-50%);
}
.navigation{
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
}
.bar{
  width: 50px;
  height: 10px;
  border: 2px solid #fff;
  border-radius: 10%;
  margin: 6px;
  cursor: pointer;
  transition: 0.4s;
}
.bar:hover{
  background: #fff;
}

input[name="r"]{
  position: absolute;
  visibility: hidden;
}

.slides{
  width: 500%;
  height: 100%;
  display: flex;
}

.slide{
  width: 20%;
  transition: 0.6s;
}
.slide img{
  width: 100%;
  height: 100%;
}

#r1:checked ~ .s1{
  margin-left: 0;
}
#r2:checked ~ .s1{
  margin-left: -20%;
}
#r3:checked ~ .s1{
  margin-left: -40%;
}
#r4:checked ~ .s1{
  margin-left: -60%;
}
#r5:checked ~ .s1{
  margin-left: -80%;
}

#webgl_iframe {
  padding-top: 75px;

}

.btn:hover {
  background-position: right center;
}

.btn {
  flex: 1 1 auto;
  margin: 10px;
  padding: 30px;
  text-align: center;
  text-transform: uppercase;
  transition: 0.5s;
  background-size: 200% auto;
  color: white;
 /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
  box-shadow: 0 0 20px #eee;
  border-radius: 10px;
}

.btn-1 {
  padding: 7px;
  border-radius:  15%/30%;
  background-image: linear-gradient(to right, #fbc2eb 0%, #a6c1ee 51%, #fbc2eb 100%)
}

.footer-btn {
  margin: 25px;
}

.parent {
  display: grid;
  grid-template-columns: 2fr 2fr 2fr;
  grid-template-rows: .5fr 2fr 2fr 2fr;
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-items: stretch;
  align-items: stretch;
  text-align: center;

  }
  .div1 { grid-area: 1 / 1 / 2 / 2; }
  .div2 { grid-area: 2 / 1 / 3 / 2; }
  .div3 { grid-area: 3 / 1 / 4 / 2; }
  .div4 { grid-area: 1 / 2 / 2 / 3; }
  .div5 { grid-area: 2 / 2 / 3 / 3; }
  .div6 { grid-area: 3 / 2 / 4 / 3; }
  .div7 { grid-area: 4 / 2 / 5 / 3; }
  .div8 { grid-area: 1 / 3 / 2 / 4; }
  .div9 { grid-area: 2 / 3 / 3 / 4; }
  .div10 { grid-area: 3 / 3 / 4 / 4; }

